--- a/cStor-StorageClass.yaml
+++ b/cStor-StorageClass.yaml
@@ -2,12 +2,12 @@
 kind: StorageClass
 apiVersion: storage.k8s.io/v1
 metadata:
-  name: cStor
+  name: cstor
   annotations:
     openebs.io/cas-type: cstor
     cas.openebs.io/config: |
       - name: StoragePoolClaim
-        value: "cStor"
+        value: "cstor"
       - name: ReplicaCount
         value: "3"
     storageclass.kubernetes.io/is-default-class: 'true'
